small spacing fix

--- a/packages/domains-table/src/domains-table/style.scss
+++ b/packages/domains-table/src/domains-table/style.scss
@@ -161,7 +161,7 @@
 		height: 16px;
 		position: relative;
 		top: 3px;
-		margin-right: -6px;
+		margin-right: -5px;
 
 		&__active {
 			fill: var(--studio-green-50);
